--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ nbformat==5.0.8
 nbsphinx==0.8.0
 nest-asyncio==1.4.3
 notebook==5.7.10
-numba==0.52.0
+numba
 numpy==1.20.3
 packaging==20.8
 pandas==1.2.4
