--- a/climateuncertaintyspilloverbook/_config.yml
+++ b/climateuncertaintyspilloverbook/_config.yml
@@ -9,8 +9,10 @@ author: The Jupyter Book Community
 execute:
   timeout: -1
   execute_notebooks: force
-
-
+sphinx:
+  config:
+    bibtex_reference_style: author_year
+    bibtex_default_style: latin
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
@@ -18,7 +20,7 @@ latex:
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
-  - bib_file.rst
+  - climate.bib
 
 # Information about where the book exists on the web
 repository:
