--- a/climateuncertaintyspilloverbook/_toc.yml
+++ b/climateuncertaintyspilloverbook/_toc.yml
@@ -7,13 +7,14 @@ chapters:
 - file: sec1_Introduction
 - file: sec2_UncertainClimateDynamics
 - file: sec3_UncertainDamage
-- file: sec4_IllustrativeEconI
+- file: sec4_IllustrativeEconIa
+- file: sec4_IllustrativeEconIb
 - file: sec5_IllustrativeEconII
 - file: sec6_IllustrativeEconIII
-- file: sec7_Conclusion
+- file: sec7_IllustrativeEconIV
+- file: sec8_IllustrativeEconV
+- file: sec9_Conclusion
 - file: appendix1
 - file: appendix2
-- file: appendix2_smoothambiguity
-- file: appendix3
 - file: bib_file
 - file: modules_index
