--- a/climateuncertaintyspilloverbook/_toc.yml
+++ b/climateuncertaintyspilloverbook/_toc.yml
@@ -16,5 +16,6 @@ chapters:
 - file: sec9_Conclusion
 - file: appendix1
 - file: appendix2
+- file: appendix2_remark3p1
 - file: bib_file
 - file: modules_index
