--- a/climateuncertaintyspilloverbook/_config.yml
+++ b/climateuncertaintyspilloverbook/_config.yml
@@ -11,6 +11,8 @@ execute:
   execute_notebooks: force
 sphinx:
   config:
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     bibtex_reference_style: author_year
     bibtex_default_style: latin
 # Define the name of the latex output file for PDF builds
