--- a/jybook/_toc.yml
+++ b/jybook/_toc.yml
@@ -7,7 +7,7 @@ chapters:
 - file: sec1_Introduction
 - file: sec2_UncertainClimateDynamics
 - file: sec3_UncertainDamage
-- file: sec4_IllustrativeEconIA
+- file: sec4_IllustrativeEconI
 - file: sec5_IllustrativeEconII
 - file: sec6_IllustrativeEconIII
 - file: sec7_IllustrativeEconIV
