--- a/requirements.txt
+++ b/requirements.txt
@@ -1,152 +1,104 @@
 alabaster==0.7.12
-anyio==3.3.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-attrs==20.3.0
+anyio==3.3.4
+argon2-cffi==21.1.0
+attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
-beautifulsoup4==4.9.3
-bleach==4.0.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==7.1.2
+bleach==4.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
 colorama==0.4.4
-css-html-js-minify==2.5.5
 cycler==0.10.0
-debugpy==1.4.1
-decorator==5.0.9
+debugpy==1.5.0
+decorator==5.1.0
 defusedxml==0.7.1
-docutils==0.16
+dnspython==1.16.0
+docopt==0.6.2
+docutils==0.17.1
 entrypoints==0.3
-filelock==3.0.12
-gitdb==4.0.7
-GitPython==3.1.18
-greenlet==1.1.1
-grpcio==1.39.0
-idna==3.2
+fett==0.3.2
+idna==3.3
 imagesize==1.2.0
-importlib-metadata==4.8.1
-importlib-resources==5.2.2
-ipykernel==6.2.0
-ipython==7.26.0
+ipykernel==6.4.1
+ipython==7.28.0
 ipython-genutils==0.2.0
-ipywidgets==7.6.3
 jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
+Jinja2==3.0.2
 json5==0.9.6
-jsonschema==3.2.0
-jupyter-book==0.11.3
-jupyter-cache==0.4.3
-jupyter-client==7.0.1
-jupyter-core==4.7.1
-jupyter-server==1.10.2
-jupyter-server-mathjax==0.2.3
-jupyter-sphinx==0.3.2
-jupyterlab==3.1.8
+jsonschema==4.1.0
+jupyter-client==7.0.6
+jupyter-core==4.8.1
+jupyter-server==1.11.1
+jupyterlab==3.2.0
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.7.2
-jupyterlab-widgets==1.0.0
-jupytext==1.10.3
-kiwisolver==1.3.1
-latexcodec==2.0.1
-libsass==0.20.1
-linkify-it-py==1.0.1
+jupyterlab-server==2.8.2
+kiwisolver==1.3.2
+livereload==2.6.3
 llvmlite==0.37.0
-lxml==4.6.3
-markdown-it-py==0.6.2
 MarkupSafe==2.0.1
 matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mdit-py-plugins==0.2.6
+matplotlib-inline==0.1.3
 mistune==0.8.4
-msgpack==1.0.2
-myst-nb==0.12.3
-myst-parser==0.13.7
-nbclassic==0.3.1
+nbclassic==0.3.2
 nbclient==0.5.4
-nbconvert==5.6.1
-nbdime==3.1.0
+nbconvert==6.2.0
 nbformat==5.1.3
-nbsphinx==0.8.7
 nest-asyncio==1.5.1
-notebook==6.4.3
-numba==0.54.0
+networkx==2.6.3
+notebook==6.4.4
+numba==0.54.1
 numpy==1.20.3
 packaging==21.0
-pandas==1.3.2
-pandocfilters==1.4.3
-panflute==2.1.0
+pandas==1.3.4
+pandocfilters==1.5.0
 parso==0.8.2
-pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.3.2
-plotly==5.2.2
+Pillow==8.4.0
+plotly==5.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
-protobuf==3.17.3
-ptyprocess==0.7.0
-pybind11==2.7.1
-pybtex==0.24.0
-pybtex-docutils==1.0.1
+pybind11==2.8.0
 pycparser==2.20
-pydata-sphinx-theme==0.6.3
 Pygments==2.10.0
+pymongo==3.11.4
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
-python-slugify==5.0.2
-pytz==2021.1
+python-jsonrpc-server==0.3.4
+pytz==2021.3
+pywin32==302
+pywinpty==1.1.4
 PyYAML==5.4.1
-pyzmq==22.2.1
-quantecon-book-theme==0.2.6
-ray==1.6.0
-redis==3.5.3
+pyzmq==22.3.0
 requests==2.26.0
 requests-unixsocket==0.2.0
-rjsmin==1.1.0
+rstcheck==3.3.1
 scipy==1.7.1
 Send2Trash==1.8.0
 six==1.16.0
-smmap==4.0.0
 sniffio==1.2.0
+snooty-lextudio==1.11.4.dev0
 snowballstemmer==2.1.0
-# SolveLinSys==0.0.1
-soupsieve==2.2.1
-Sphinx==3.5.4
-sphinx-book-theme==0.1.3
-sphinx-comments==0.0.3
-sphinx-copybutton==0.4.0
-sphinx-external-toc==0.2.3
-sphinx-jupyterbook-latex==0.4.2
-sphinx-material==0.0.34
-sphinx-multitoc-numbering==0.1.3
-sphinx-panels==0.5.2
-sphinx-thebe==0.0.10
-sphinx-togglebutton==0.2.3
+SolveLinSys @ file:///C:/Users/Suri/Dropbox/climate_projects/temp/ClimateUncertaintySpillover/src/cppcore
+Sphinx==4.2.0
+sphinx-autobuild==2021.3.14
 sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-bibtex==2.2.1
-sphinxcontrib-contentui==0.2.5
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-SQLAlchemy==1.4.23
 tenacity==8.0.1
-terminado==0.11.1
+terminado==0.12.1
 testpath==0.5.0
-text-unidecode==1.3
 toml==0.10.2
 tornado==6.1
-traitlets==5.0.5
-uc-micro-py==1.0.1
-Unidecode==1.2.0
-urllib3==1.26.6
+traitlets==5.1.0
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+watchdog==1.0.2
 wcwidth==0.2.5
-web-compile==0.2.1
 webencodings==0.5.1
 websocket-client==1.2.1
-widgetsnbextension==3.5.1
-zipp==3.5.0
+wincertstore==0.2
