--- a/requirements.txt
+++ b/requirements.txt
@@ -67,8 +67,8 @@ pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-jsonrpc-server==0.3.4
 pytz==2021.3
-pywin32==302
-pywinpty==1.1.4
+# pywin32==302
+# pywinpty==1.1.4
 PyYAML==5.4.1
 pyzmq==22.3.0
 requests==2.26.0
