--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ argon2-cffi==21.1.0
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
+beautifulsoup4==4.10.0
 bleach==4.1.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
 colorama==0.4.4
+css-html-js-minify==2.5.5
 cycler==0.10.0
 debugpy==1.5.0
 decorator==5.1.0
@@ -34,8 +36,10 @@ jupyterlab==3.2.0
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.8.2
 kiwisolver==1.3.2
+latexcodec==2.0.1
 livereload==2.6.3
 llvmlite==0.37.0
+lxml==4.6.4
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
@@ -59,6 +63,8 @@ plotly==5.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 pybind11==2.8.0
+pybtex==0.24.0
+pybtex-docutils==1.0.1
 pycparser==2.20
 Pygments==2.10.0
 pymongo==3.11.4
@@ -66,9 +72,10 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-jsonrpc-server==0.3.4
+python-slugify==5.0.2
 pytz==2021.3
-# pywin32==302
-# pywinpty==1.1.4
+#pywin32==302
+#pywinpty==1.1.4
 PyYAML==5.4.1
 pyzmq==22.3.0
 requests==2.26.0
@@ -80,9 +87,14 @@ six==1.16.0
 sniffio==1.2.0
 snooty-lextudio==1.11.4.dev0
 snowballstemmer==2.1.0
+./src/cppcore
+soupsieve==2.3
 Sphinx==4.2.0
 sphinx-autobuild==2021.3.14
+sphinx-material==0.0.35
+sphinx-togglebutton==0.2.3
 sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-bibtex==2.4.1
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
@@ -91,10 +103,12 @@ sphinxcontrib-serializinghtml==1.1.5
 tenacity==8.0.1
 terminado==0.12.1
 testpath==0.5.0
+text-unidecode==1.3
 toml==0.10.2
 tornado==6.1
 traitlets==5.1.0
 typing-extensions==3.10.0.2
+Unidecode==1.3.2
 urllib3==1.26.7
 watchdog==1.0.2
 wcwidth==0.2.5
