--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,115 @@
-alabaster==0.7.12
-anyio==3.3.4
-argon2-cffi==21.1.0
-attrs==21.2.0
+anyio==3.5.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+attrs==21.4.0
 Babel==2.9.1
 backcall==0.2.0
-beautifulsoup4==4.10.0
-bleach==4.1.0
+beautifulsoup4==4.11.1
+bleach==5.0.0
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.7
-colorama==0.4.4
-css-html-js-minify==2.5.5
-cycler==0.10.0
-debugpy==1.5.0
-decorator==5.1.0
+charset-normalizer==2.0.12
+cycler==0.11.0
+Cython==0.29.28
+debugpy==1.6.0
+decorator==5.1.1
 defusedxml==0.7.1
-dnspython==1.16.0
-docopt==0.6.2
-docutils==0.17.1
-entrypoints==0.3
-fett==0.3.2
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.3
+filelock==3.7.1
+fonttools==4.32.0
+gdown==4.4.0
 idna==3.3
-imagesize==1.2.0
-ipykernel==6.4.1
-ipython==7.28.0
+importlib-metadata==4.11.4
+importlib-resources==5.6.0
+install==1.3.5
+ipykernel==6.12.1
+ipython==8.2.0
 ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.2
+jedi==0.18.1
+Jinja2==3.1.1
 json5==0.9.6
-jsonschema==4.1.0
-jupyter-client==7.0.6
-jupyter-core==4.8.1
-jupyter-server==1.15.4
-jupyterlab==3.2.0
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.2
-kiwisolver==1.3.2
-latexcodec==2.0.1
-livereload==2.6.3
-llvmlite==0.37.0
-lxml==4.6.4
-MarkupSafe==2.0.1
-matplotlib==3.4.3
+jsonschema==4.4.0
+jupyter-client==7.2.2
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.9.2
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyter-server==1.16.0
+jupyterlab==3.3.3
+jupyterlab-pygments==0.2.0
+jupyterlab-server==2.12.0
+jupytext==1.13.8
+kiwisolver==1.4.2
+llvmlite==0.38.0
+lxml==4.8.0
+markdown-it-py==2.1.0
+MarkupSafe==2.1.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
+mdit-py-plugins==0.3.0
+mdurl==0.1.1
 mistune==0.8.4
-nbclassic==0.3.2
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-networkx==2.6.3
-notebook==6.4.4
-numba==0.54.1
-numpy==1.20.3
-packaging==21.0
-pandas==1.3.4
+nbclassic==0.3.7
+nbclient==0.5.13
+nbconvert==6.4.5
+nbformat==5.3.0
+nest-asyncio==1.5.5
+notebook==6.4.10
+notebook-shim==0.1.0
+numba==0.55.1
+numpy==1.21.5
+packaging==21.3
+pandas==1.4.2
 pandocfilters==1.5.0
-parso==0.8.2
+parso==0.8.3
+petsc4py==3.17.0
+petsclinearsystem==0.0.0
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.4.0
-plotly==5.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-pybind11==2.8.0
-pybtex==0.24.0
-pybtex-docutils==1.0.1
-pycparser==2.20
-Pygments==2.10.0
-pymongo==3.11.4
-pyparsing==2.4.7
-pyrsistent==0.18.0
+Pillow==9.1.1
+plotly==5.7.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pybind11==2.9.2
+pycparser==2.21
+pyee==8.2.2
+Pygments==2.11.2
+pyparsing==3.0.7
+pyppeteer==1.0.2
+pyrsistent==0.18.1
+PySocks==1.7.1
 python-dateutil==2.8.2
-python-jsonrpc-server==0.3.4
-python-slugify==5.0.2
-pytz==2021.3
-#pywin32==302
-#pywinpty==1.1.4
-PyYAML==5.4.1
+pytz==2022.1
+PyYAML==6.0
 pyzmq==22.3.0
-requests==2.26.0
-requests-unixsocket==0.2.0
-rstcheck==3.3.1
-scipy==1.7.1
+requests==2.27.1
+scipy==1.8.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
-snooty-lextudio==1.11.4.dev0
-snowballstemmer==2.1.0
 ./src/cppcore
-soupsieve==2.3
-Sphinx==4.2.0
-sphinx-autobuild==2021.3.14
-sphinx-material==0.0.35
-sphinx-togglebutton==0.2.3
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-bibtex==2.4.1
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+soupsieve==2.3.2
+stack-data==0.2.0
 tenacity==8.0.1
-terminado==0.12.1
-testpath==0.5.0
-text-unidecode==1.3
+terminado==0.13.3
+testpath==0.6.0
 toml==0.10.2
 tornado==6.1
-traitlets==5.1.0
-typing-extensions==3.10.0.2
-Unidecode==1.3.2
-urllib3==1.26.7
-watchdog==1.0.2
+tqdm==4.64.0
+traitlets==5.1.1
+urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.2.1
-wincertstore==0.2
+websocket-client==1.3.2
+websockets==10.3
+xppy==0.7.0
+zipp==3.8.0
